footer bottom correction

--- a/index.html
+++ b/index.html
@@ -429,10 +429,10 @@
             
         </div>
 
-        <ul class="space-y-5 lg:space-y-8 font-sora lg:text-xl text-[#111111] mb-10 menu">
-          <li><a>Find a pet</a></li>
-          <li><a>Breeds</a></li>
-          <li><a>Contact Us</a></li>
+        <ul class="space-y-5 lg:space-y-8 font-sora lg:text-xl text-[#111111] mb-10 menu px-0">
+          <li><a class="px-0">Find a pet</a></li>
+          <li><a class="px-0">Breeds</a></li>
+          <li><a class="px-0">Contact Us</a></li>
         </ul>
 
         <div class="relative">
